--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.2.2",
     "autoprefixer": "^10.0.2",
+    "node-sass": "^4.13.1",
     "postcss": "^8.1.9",
     "postcss-cli": "^8.3.0",
     "react": "^17.0.1",
@@ -15,9 +16,9 @@
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
-    "react-slick": "^0.27.13",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "swiper": "^6.3.5",
     "tailwindcss": "^2.0.1",
     "web-vitals": "^0.2.4"
   },
