fix: params route

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.2.2",
     "autoprefixer": "^10.0.2",
+    "axios": "^0.21.0",
     "node-sass": "^4.13.1",
     "postcss": "^8.1.9",
     "postcss-cli": "^8.3.0",
